# src/app.py
@@ -10,17 +10,18 @@ from routes.users_bp import users_bp
 from routes.auth_bp import auth_bp
 from routes.activity_log_bp import activity_logs_bp
 
+
 app.register_blueprint(users_bp, url_prefix='/users')
 app.register_blueprint(notes_bp, url_prefix='/notes')
 app.register_blueprint(auth_bp, url_prefix='/auth')
-app.register_blueprint(activity_logs_bp, url_prefix='/activity_logs')
+app.register_blueprint(activity_logs_bp, url_prefix='/activity-logs')
 
+app = config.connex_app
 # Create database schema
 # with app.app_context():
 #     db.drop_all()
 #     db.create_all()
 
-app = config.connex_app
 app.add_api(config.basedir / "swagger.json")
 
 @app.route("/")
@@ -30,4 +31,4 @@ def home():
 
 
 if __name__ == "__main__":
-    app.run(host="0.0.0.0", port=8000)
+    config.connex_app.run(host="0.0.0.0", port=8000)
