# src/swagger.json
@@ -264,7 +264,7 @@
         }
       }
     },
-    "/activity_logs/user": {
+    "/activity-logs/user": {
       "get": {
         "operationId": "controllers.ActivityLogsController.get_activity_logs",
         "summary": "Get activity logs for the current user",
@@ -295,7 +295,7 @@
         }
       }
     },
-    "/activity_logs": {
+    "/activity-logs": {
       "get": {
         "operationId": "controllers.ActivityLogsController.get_all_logs",
         "tags": ["Activity Logs"],
